# qas_py

./: CHANGELOG.md  LICENSE  Makefile  PROTOCOL.md  README.md  manifest.scm  pyproject.toml
.github/workflows/: ci.yml
examples/: etc.json  misc.json
qas/core/: configs.py  data.py
tests/: test_version.py
tests/DATA/: etc.json  misc.json
tests/core/: test_configs.py
